[fantasy] A couple of ideas for spells.

--- a/latex/fantasy/skills.tex
+++ b/latex/fantasy/skills.tex
@@ -197,7 +197,8 @@
 %Създаване (Ум)    - храна и вода, предмети и създания.                                               \\
 %Миъл (Ум)         - отношение и спомени                                                              \\
 %Tелепортация (Ум) - пътуване в този и други светове, с товари                                        \\
-
+% предпазване от оръжия - успех щети поема
+% geas - трябва да направиш еди си кво, и си през това време само наблюдател
 
 \section{Общуване}
 Заявява се търсен ефект и се хвърля 'умение + d* с/у Ум на целта'.
