Created Centaur race.

--- a/latex/fantasy/races.tex
+++ b/latex/fantasy/races.tex
@@ -178,4 +178,21 @@
 }
 
 
+\race{Кентавър}{2}
+{Свободолюбиви}
+{4 - 14}{1 - 10}{1 - 12}{1 - 8}
+{
+Двойно допустимо натоварване;
+Двойна нужда от храна и вода
+}
+{
+Лък(Л);
+Лов(Л);
+Тичане(Л);
+Копие(Л);
+Плът(И);
+Билкарство(У)
+}
+
+
 \end{multicols}
